# us-weather-alerts

./: .env.sample  .envrc  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.dbt/: profiles.yml
dags/: retrieve_raw_data.py  us_weather_elt.py
dags/basics/: dbt_basics.py
dags/dbt_sample/: dbt_basics.py
database/base/1/: 1247  1247_vm  1255  1259_vm  13613  13613_vm  2608_vm  2609  2610_vm  2612_vm  2615_vm  2619  2658  2663  2673  2674  2685  2696  2704  2836_vm  2840  2841  3455  3456  3541_vm  3600
database/base/13779/: 1249  1255_vm  1259  2600_vm  2601_vm  2605_vm  2606_vm  2608  2610  2615  2618  2618_vm  2619_vm  2659  2678  2682  2684  2753_vm  3079  3079_vm  3081  3394  3602
database/base/13780/: 1249_vm  1259  13603  13603_vm  13608  13608_vm  2602_vm  2606  2607_vm  2609_vm  2612  2616_vm  2617_vm  2662  2675  2679  2690  2691  2692  2703  2838  2839  3080  3600_vm  3601_vm  3602_vm  3603_vm  3764  3764_vm  pg_internal.init
database/base/16384/: 1247  1247_vm  1249  1249_vm  1259  1259_vm  13598  13598_vm  16388  2579  2603_vm  2606  2606_vm  2608  2608_vm  2610  2610_vm  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2681  2693  2703  2704  2836  2838_vm  2840_vm  3394_vm  3455  3456_vm  3603  (+1 more)
database/global/: 1213_vm  1214  1214_vm  1260  1260_vm  1261  1261_vm  1262  1262_vm  2396  2396_vm  2397  2671  2672  pg_control  pg_internal.init
database/pg_stat/: db_0.stat  db_13780.stat  db_16384.stat  global.stat
db_us_weather/: dbt_project.yml
dbt_us_weather/: .user.yml  dbt_project.yml  profiles.yml
dbt_us_weather/seeds/: ZoneCounty.csv
logs/scheduler/: latest
meeting_notes/: 20240312 Kickoff.md  20240314_working_session.md
scripts/: entrypoint.sh
us_weather_alerts/: Dockerfile  api.py  load_to_bigquery.py
us_weather_alerts/schemas/: alerts.json
us_weather_alerts/test_data/: example_parsed_data.csv  example_response.json
(+15 files in other folders)
