[tool.poetry]
name = "us-weather-alerts"
version = "0.1.0"
description = "Le Wagon Data Engineering bootcamp final project"
authors = ["Malte Berneaud <malte.berneaud@gmail.com>", "Janine Windhoff <janine.windhoff@gmail.com>", "Mouad Rabih Senhaji <mouadrs2846@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
